<resources>
    <string name="app_name">ITS</string>
    <string name="khoa">thebestsecretkey</string>

    <string name="localization">en</string>

    <!-- Welcome Screen -->
    <string name="button_play_welcome_screen">Play</string>
    <string name="button_join_welcome_screen">Join</string>
    <!-- End -->

    <!-- Login Screen -->
    <string name="edit_text_username_login">Enter Username</string>
    <string name="edit_text_password_login">Enter Password</string>
    <string name="text_view_forgot_password_login"><u>Forgot your password?</u></string>
    <string name="button_play_now_login">Play now</string>
    <!-- End -->

    <!-- Register Screen -->
    <string name="edit_text_username_register">Enter your username</string>
    <string name="edit_text_password_register">Enter your password</string>
    <string name="edit_text_retype_password_register">Retype password</string>
    <string name="edit_text_phone_register">Enter your phone</string>
    <string name="edit_text_email_register">Enter your email</string>
    <string name="edit_text_fullname_register">Enter your fullname</string>
    <string name="edt_text_phone_receive_exchange_register">Enter phone receive change</string>
    <string name="button_join_now_register">Join now</string>
    <!-- End -->

    <!-- Main Screen -->
    <string name="title_activity_main"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_view_navigation_header">I want to ...</string>

    <string name="navigation_menu_item_deposit"><b>Deposit</b></string>
    <string name="navigation_menu_item_withdraw"><b>Withdraw</b></string>
    <string name="navigation_menu_item_view_statistics"><b>View Statistics</b></string>
    <string name="navigation_menu_item_edit_profile"><b>Edit profile</b></string>
    <string name="navigation_menu_item_log_out"><b>Log Out</b></string>

    <string name="action_settings">Settings</string>

    <string name="button_a_win_main">A Win</string>
    <string name="button_b_win_main">B Win</string>
    <string name="button_draw_main">Draw</string>
    <string name="button_bet_now_main">Bet Now</string>

    <string name="money">$ 1,234,567.00</string>
    <!-- End -->

    <!-- Validation -->
    <string name="validate_username">Please enter your desired username</string>
    <string name="validate_password">Please enter the password</string>
    <string name="validate_retype_password">Please retype the password</string>
    <string name="validate_match_password">Password is unmatched</string>
    <string name="validate_phone">Please enter your phone number</string>
    <string name="validate_email">Please enter your email</string>
    <string name="validate_invalid_email">Invalid email</string>
    <string name="validate_invalid_phone">Invalid phone number</string>
    <string name="validate_fullname">Please enter your fullname</string>
    <string name="validate_phone_received">Please enter the number</string>
    <string name="validate_empty_form">Please fill in the form</string>
    <string name="validate_old_password">Please enter your old password</string>
    <string name="validate_new_password">Please enter your new password</string>
    <string name="validate_retype_new_password">Please retype the new password</string>
    <string name="validate_matched_old_password">The new password must be different from the old pass</string>
    <string name="validate_matched_retype_password">Invalid password</string>
    <string name="validate_phone_received_exchange">Please enter the number receive change</string>
    <!-- End -->

    <string name="login_error">Error. Please check again</string>
    <string name="server_error">There has been an error within the server. Please check again in a few more minutes</string>

    <!-- Update Profile Screen -->
    <string name="update_profile">Update Profile</string>
    <string name="update_fullname">Enter your new name</string>
    <string name="update_phone">Enter your new number</string>
    <string name="update_email">Enter your new email</string>
    <string name="apply_change">Apply Change</string>
    <!-- End -->

    <!-- Verify Withdraw Screen -->
    <string name="withdraw">Withdraw</string>
    <string name="verify_password">Verify Password</string>
    <string name="done">Done</string>
    <string name="verify">Verify</string>
    <string name="edit_text_phone_receive_exchange">Enter the number to withdraw money</string>
    <string name="amount">Choose amount to withdraw</string>
    <!-- End -->

    <!-- Change Password Screen -->
    <string name="change_password">Change password</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">Enter new password</string>
    <string name="retype_new_password">Retype new password</string>
    <!-- End -->

    <!-- Deposit Screen -->
    <string name="deposit">Deposit</string>
    <!-- End -->

    <!-- Server Request Success message -->
    <string name="logout_success">Logged out successful</string>
    <string name="profile_update_success">Updated successful</string>
    <string name="change_password_success">Updated new password successful</string>
    <!-- End -->

    <!-- Server Request Failed message -->
    <string name="change_password_failed">Failed to updated new password</string>
    <!-- End -->
</resources>
