<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deposit"
            android:icon="@color/item_navigation_background"
            android:title="@string/navigation_menu_item_deposit" />
        <item
            android:id="@+id/nav_withdraw"
            android:icon="@color/item_navigation_background"
            android:title="@string/navigation_menu_item_withdraw" />
        <item
            android:id="@+id/nav_viewStatistics"
            android:icon="@color/item_navigation_background"
            android:title="@string/navigation_menu_item_view_statistics" />
        <item
            android:id="@+id/nav_editProfile"
            android:icon="@color/item_navigation_background"
            android:title="@string/navigation_menu_item_edit_profile" />
        <item
            android:id="@+id/nav_editPassword"
            android:icon="@color/item_navigation_background"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@color/item_navigation_background"
            android:title="@string/navigation_menu_item_log_out" />
    </group>
</menu>
