<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_app"
    tools:context="com.its.its.view.UpdateProfileActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_view_margin_bottom_update_profile_portrait"
        android:textSize="@dimen/text_view_text_size_update_profile_portrait"
        android:textColor="@color/RED"
        android:gravity="center"
        android:text="@string/update_profile" />

    <EditText
        android:id="@+id/edtFullname_Update"
        android:layout_width="@dimen/edit_text_width_update_profile_portrait"
        android:layout_height="wrap_content"
        android:background="@color/button_channel_background"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="@dimen/drawable_padding_left_login_portrait"
        android:hint="@string/update_fullname"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtPhone_Update"
        android:layout_width="@dimen/edit_text_width_update_profile_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_update_profile_portrait"
        android:background="@color/button_channel_background"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="@dimen/drawable_padding_left_login_portrait"

        android:hint="@string/update_phone"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edtEmail_Update"
        android:layout_width="@dimen/edit_text_width_update_profile_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_update_profile_portrait"
        android:background="@color/button_channel_background"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="@dimen/drawable_padding_left_login_portrait"
        android:hint="@string/update_email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="@dimen/button_width_update_profile_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top_update_profile_portrait"
        android:textSize="@dimen/button_text_size_update_profile_portrait"
        android:background="@drawable/button_play_shape"
        android:text="@string/apply_change"
        android:textColor="@color/WHITE" />
</LinearLayout>
