<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background_app"
    tools:context="com.its.its.view.RegisterActivity">

    <EditText
        android:id="@+id/edtUsername_Register"
        android:layout_width="@dimen/edit_text_width_register_portrait"
        android:layout_height="wrap_content"
        android:background="@color/button_play_text_welcome_screen"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="@dimen/edit_text_drawable_padding_left_register_portrait"
        android:ems="10"
        android:hint="@string/edit_text_username_register"
        android:inputType="textPersonName"
        android:textSize="@dimen/edit_text_text_size_register_portrait" />

    <EditText
        android:id="@+id/edtPassword_Register"
        android:layout_width="@dimen/edit_text_width_register_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_register_portrait"
        android:ems="10"
        android:textSize="@dimen/edit_text_text_size_register_portrait"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/edit_text_drawable_padding_left_register_portrait"
        android:hint="@string/edit_text_password_register"
        android:background="@color/button_play_text_welcome_screen"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtRetypePass_Register"
        android:layout_width="@dimen/edit_text_width_register_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_register_portrait"
        android:ems="10"
        android:textSize="@dimen/edit_text_text_size_register_portrait"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/edit_text_drawable_padding_left_register_portrait"
        android:hint="@string/edit_text_retype_password_register"
        android:background="@color/button_play_text_welcome_screen"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtPhone_Register"
        android:layout_width="@dimen/edit_text_width_register_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_register_portrait"
        android:ems="10"
        android:textSize="@dimen/edit_text_text_size_register_portrait"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="@dimen/edit_text_drawable_padding_left_register_portrait"
        android:hint="@string/edit_text_phone_register"
        android:background="@color/button_play_text_welcome_screen"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edtEmail_Register"
        android:layout_width="@dimen/edit_text_width_register_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_register_portrait"
        android:ems="10"
        android:textSize="@dimen/edit_text_text_size_register_portrait"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="@dimen/edit_text_drawable_padding_left_register_portrait"
        android:hint="@string/edit_text_email_register"
        android:background="@color/button_play_text_welcome_screen"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtFullname_Register"
        android:layout_width="@dimen/edit_text_width_register_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_register_portrait"
        android:ems="10"
        android:textSize="@dimen/edit_text_text_size_register_portrait"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="@dimen/edit_text_drawable_padding_left_register_portrait"
        android:hint="@string/edit_text_fullname_register"
        android:background="@color/button_play_text_welcome_screen"
        android:inputType="text" />

    <Button
        android:id="@+id/btnJoin_Register"
        android:layout_width="@dimen/button_width_register_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top_register_portrait"
        android:textSize="@dimen/button_text_size_register_portrait"
        android:background="@drawable/button_join_shape"
        android:text="@string/button_join_now_register" />
</LinearLayout>
