<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_app"
    tools:context="com.its.its.view.ChangePasswordActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_view_text_size_change_password_portrait"
        android:textColor="@color/RED"
        android:gravity="center"
        android:text="@string/change_password" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="@dimen/edit_text_width_change_password_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top_change_password_portrait"
        android:background="@color/button_channel_background"

        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="@dimen/edit_text_width_update_profile_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top_update_profile_portrait"
        android:background="@color/button_channel_background"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="@dimen/edit_text_width_update_profile_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top_update_profile_portrait"
        android:background="@color/button_channel_background"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/retype_new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/button_width_update_profile_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top_update_profile_portrait"
        android:textSize="@dimen/button_text_size_update_profile_portrait"
        android:background="@drawable/button_play_shape"
        android:text="Apply Change"
        android:textColor="@color/WHITE" />
</LinearLayout>
