<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_app"
    tools:context="com.its.its.view.VerifyWithdrawActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_view_text_size_verify_withdraw_portrait"
        android:textColor="@color/RED"
        android:gravity="center"
        android:text="@string/verify_withdraw" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="@dimen/edit_text_width_verify_withdraw_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_verify_withdraw_portrait"
        android:background="@color/button_channel_background"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/edit_text_drawable_padding_left_verify_withdraw_portrait"
        android:ems="10"
        android:textSize="@dimen/edit_text_text_size_verify_withdraw_portrait"
        android:hint="@string/edit_text_password_register"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="@dimen/edit_text_width_verify_withdraw_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top_verify_withdraw_portrait"
        android:background="@color/button_channel_background"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="@dimen/edit_text_drawable_padding_left_verify_withdraw_portrait"
        android:ems="10"
        android:textSize="@dimen/edit_text_text_size_verify_withdraw_portrait"
        android:hint="@string/edit_text_phone_receive_exchange"
        android:inputType="phone" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/button_width_verify_withdraw_portrait"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top_verify_withdraw_portrait"
        android:textSize="@dimen/button_text_size_verify_withdraw_portrait"
        android:background="@drawable/button_play_shape"
        android:text="@string/verify"
        android:textColor="@color/WHITE" />
</LinearLayout>
